--- a/index.html
+++ b/index.html
@@ -38,10 +38,19 @@
 
         </div>
         <div class="row">
-            <div class="col-lg-9">
-                <nav></nav>
+            <div class="col-lg-9 p-0">
+                <nav>
+                    <ul class="menu d-flex justify-content-md-between">
+                        <li><a href="#" class="item-m"><i class="icon-m fa fa-home"><span class="top-link-m">Главная</span></i></a></li>
+                        <li><a href="#" class="item-m"><i class="icon-m fa fa-star"><span class="top-link-m">Закладки</span></i></a></li>
+                        <li><a href="#" class="item-m"><i class="icon-m fa fa-id-badge"><span class="top-link-m">Личний кабинет</span></i></a></li>
+                        <li><a href="#" class="item-m"><i class="icon-m fa fa-cart-plus"><span class="top-link-m">Обратная связь</span></i></a></li>
+                        <li><a href="#" class="item-m"><i class="icon-m fa fa-check-square"><span class="top-link-m">Информация</span></i></a></li>
+                        <li><a href="#" class="item-m"><i class="icon-m fa fa-envelope-o"><span class="top-link-m">Напиши</span></i></a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="col-lg-3 col-left">
+            <div class="col-lg-3 col-left pr-0">
                 <h3 class="heading">категории</h3>
             </div>
         </div>
@@ -51,7 +60,7 @@
     <main>
         <div class="container main-container">
             <div class="row">
-                <div class="col-lg-9 col-md-9">
+                <div class="col-lg-9 col-md-9 mt-4">
                     <section id="carousel" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -201,7 +210,7 @@
                         </div>
                     </section>
                 </div>
-                <div class="col-lg-3 col-md-3" id="column-right">
+                <div class="col-lg-3 col-md-3 pr-0" id="column-right">
                     <aside class="side-bar">
                         <div class="side-bar__module">
                             <ul class="box-category" id="category">
