--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>SandiPlus</title>
 </head>
-
 <body class="page-pathfinder">
 <header id="header" class="header-bg">
     <div class="container">
@@ -51,7 +50,7 @@
                 </nav>
             </div>
             <div class="col-lg-3 col-left pr-0">
-                <h3 class="heading">категории</h3>
+                <h3 class="heading"><i class="fa fa-bars"></i>категории</h3>
             </div>
         </div>
     </div>
