--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="shortcut icon" href="#" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
@@ -14,18 +14,16 @@
 <header id="header" class="header-bg">
     <div class="container">
         <div class="row d-flex justify-content-between">
-            <div class="col-lg-9 col-md-9 d-flex align-items-md-end justify-content-md-between">
-                <a href="index.html" class="d-flex justify-content-md-start"><img src="img/logo.png" alt=""></a>
-                <div class="social d-flex">
+            <div class="col-lg-9 col-md-9 pl-0 d-flex align-items-md-end justify-content-md-between flex-md-wrap">
+                <a href="index.html" class="d-flex justify-content-md-start d-sm-inline-block logo"><img src="img/logo.png" alt=""></a>
+                <div class="social">
                     <a href="#" class="fa fa-google"></a>
                     <a href="#" class="fa fa-youtube"></a>
                     <a href="#" class="fa fa-facebook"></a>
                 </div>
-                <div id="search " class="input d-flex">
+                <div id="search " class="input  btn-search">
                     <input type="text" name="search" value="" placeholder="Search">
-                    <div class="btn-search">
-                        <button type="button">Search</button>
-                    </div>
+                    <button type="button">Search</button>
                 </div>
 
             </div>
@@ -39,7 +37,7 @@
         <div class="row">
             <div class="col-lg-9 p-0">
                 <nav>
-                    <ul class="menu d-flex justify-content-md-between">
+                    <ul class="menu">
                         <li><a href="#" class="item-m"><i class="icon-m fa fa-home"><span class="top-link-m">Главная</span></i></a></li>
                         <li><a href="#" class="item-m"><i class="icon-m fa fa-star"><span class="top-link-m">Закладки</span></i></a></li>
                         <li><a href="#" class="item-m"><i class="icon-m fa fa-id-badge"><span class="top-link-m">Личний кабинет</span></i></a></li>
@@ -49,7 +47,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="col-lg-3 col-left pr-0">
+            <div class="col-lg-3 col-sm-3 col-md-3 col-left pr-0">
                 <h3 class="heading"><i class="fa fa-bars"></i>категории</h3>
             </div>
         </div>
@@ -83,7 +81,7 @@
                     </section>
                     <section id="banner">
                         <div class="row">
-                            <div class="col-lg-6 col-md-12">
+                            <div class="col-lg-6 col-md-12 text-sm-center">
                                 <div class="info banner-loawd"><h2>загрузки</h2>
                                     <p><a href="#">Информация для скачивания</a></p></div>
                             </div>
